--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,12 @@
 <ul>
   
   <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.content %></li>
+    <li><%= link_to task.id, task %> 
+    : 
+    <%= task.content %>
+    >
+    <%= task.status %>
+    </li>
   <% end %>
 </ul>
 
