--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,15 +1,27 @@
 <h1>タスク一覧</h1>
 
-<ul>
-  
+  <% if @tasks.any? %>
+    <table class="table table-striped">
+      <thread>
+        <tr>
+          <th>id</th>
+          <th>タスク</th>
+          <th>進捗</th>
+        </tr>
+      </thread>
+  <tbody>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> 
-    : 
-    <%= task.content %>
-    >
-    <%= task.status %>
-    </li>
+  <tr>
+    <td><%= link_to task.id, task %></td> 
+    <td><%=task.content %></td>
+    <td><%= task.status %></td>
+  </tr>
   <% end %>
-</ul>
+  </tbody>
+      </table>
+<div>  
+<%= paginate @tasks %>
+</div>
+<% end %>
 
-<%= link_to "新規タスクの作成", new_task_path %>
+<%= link_to "新規タスクの作成", new_task_path, class: "btn btn-primary" %>
